--- a/i3/home/user/.i3/config
+++ b/i3/home/user/.i3/config
@@ -9,9 +9,15 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+# HINT: get keysym names via `xev`
+
+
 set $mod Mod4
 
+# Font for window titles. Will also be used by the bar unless a different font
+# is used in the bar {} block below.
 font pango:DejaVu Sans Mono 7
+#font -*-fixed-*-*-*-*-10-*-*-*-*-*-*-*
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 #floating_modifier $mod
@@ -90,6 +96,8 @@ bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
+bindsym $mod+minus workspace 11
+bindsym $mod+equal workspace 12
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -102,6 +110,8 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+minus move container to workspace 11
+bindsym $mod+Shift+equal move container to workspace 12
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
