--- a/i3/home/user/.gnupg/gpg-agent.conf
+++ b/i3/home/user/.gnupg/gpg-agent.conf
@@ -1,2 +1,12 @@
-default-cache-ttl 60
-max-cache-ttl 600
+# GPGConf disabled this option here at Mon Mar 11 03:41:39 2019 CET
+# default-cache-ttl 60
+# GPGConf disabled this option here at Mon Mar 11 03:41:39 2019 CET
+# max-cache-ttl 600
+
+###+++--- GPGConf ---+++###
+default-cache-ttl 300
+max-cache-ttl 3000
+###+++--- GPGConf ---+++### Mon Mar 11 03:41:39 2019 CET
+# GPGConf edited this configuration file.
+# It will disable options before this marked block, but it will
+# never change anything below these lines.
