--- a/i3/home/user/.i3/config
+++ b/i3/home/user/.i3/config
@@ -98,6 +98,7 @@ bindsym $mod+9 workspace 9
 bindsym $mod+0 workspace 10
 bindsym $mod+minus workspace 11
 bindsym $mod+equal workspace 12
+bindsym $mod+BackSpace workspace 13
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -112,6 +113,7 @@ bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+minus move container to workspace 11
 bindsym $mod+Shift+equal move container to workspace 12
+bindsym $mod+Shift+BackSpace move container to workspace 13
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
