--- a/i3/home/user/.i3/config
+++ b/i3/home/user/.i3/config
@@ -177,7 +177,7 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-#	tray_output primary
+	tray_output LVDS1
 	status_command i3status -c ~/.i3/i3status.conf
 	#TODO: the following has no colors :(
 	#status_command ~/.i3/i3status.sh
